--- a/bin/general/UserLoginScreen.fxml
+++ b/bin/general/UserLoginScreen.fxml
@@ -14,19 +14,11 @@
 <?import javafx.scene.text.Font?>
 
 
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserLoginController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.UserLoginController">
    <children>
       <BorderPane id="borderpane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="borderpane" stylesheets="@GeneralStyleSheet.css" VBox.vgrow="ALWAYS">
          <left>
-            <VBox styleClass="test" BorderPane.alignment="CENTER">
-               <children>
-                  <ImageView fitHeight="800.0" fitWidth="469.0" pickOnBounds="true" preserveRatio="true" styleClass="img" VBox.vgrow="ALWAYS">
-                     <image>
-                        <Image url="@../img/BiteMeLogo.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </VBox>
+            <VBox styleClass="bitemelogo" BorderPane.alignment="CENTER" />
          </left>
          <center>
             <Group BorderPane.alignment="CENTER">
