--- a/src/gui/branch_manager/RegNewAccountP1Screen.fxml
+++ b/src/gui/branch_manager/RegNewAccountP1Screen.fxml
@@ -9,22 +9,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1280.0" stylesheets="@GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.RegNewAccountP1Controller">
+<AnchorPane prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.RegNewAccountP1Controller">
    <children>
-      <ImageView fitHeight="800.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@BackgroundImage.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="399.0" layoutY="127.0" text="Register new account">
-         <font>
-            <Font name="Levenim MT Bold" size="48.0" />
-         </font>
-      </Label>
-      <GridPane layoutX="549.0" layoutY="240.0" prefHeight="265.0" prefWidth="427.0">
+      <HBox layoutX="250.0" layoutY="59.0" />
+      <GridPane layoutX="404.0" layoutY="227.0" prefHeight="269.0" prefWidth="422.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.0" minWidth="10.0" prefWidth="173.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.0" minWidth="10.0" prefWidth="173.0" />
@@ -78,32 +70,37 @@
             <Label fx:id="res_lbl" prefHeight="17.0" prefWidth="215.0" GridPane.rowIndex="6" />
          </children>
       </GridPane>
-      <ImageView fitHeight="332.0" fitWidth="319.0" layoutX="495.0" layoutY="524.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="332.0" fitWidth="319.0" layoutX="346.0" layoutY="507.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@AccountRegImage.png" />
+            <Image url="@../img/AccountRegImage.png" />
          </image>
       </ImageView>
-      <Button id="NextPageBtn" fx:id="next_btn" layoutX="626.0" layoutY="506.0" mnemonicParsing="false" onAction="#NextPage" prefHeight="35.0" prefWidth="56.0" styleClass="btn" text="Next" />
-      <Button fx:id="before_btn" layoutX="59.0" layoutY="728.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="56.0" styleClass="btn" text="Back" />
-      <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="517.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true">
+      <Button id="NextPageBtn" fx:id="next_btn" layoutX="477.0" layoutY="490.0" mnemonicParsing="false" onAction="#NextPage" prefHeight="35.0" prefWidth="56.0" styleClass="btn" text="Next" />
+      <Button fx:id="before_btn" layoutX="51.0" layoutY="710.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="56.0" styleClass="btn" text="Back" />
+      <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="367.0" layoutY="234.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@UserIcon.png" />
+            <Image url="@../img/UserIcon.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="517.0" layoutY="323.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="367.0" layoutY="312.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@IDIcon.png" />
+            <Image url="@../img/IDIcon.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="517.0" layoutY="361.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="367.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@PhoneIcon.png" />
+            <Image url="@../img/PhoneIcon.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="517.0" layoutY="401.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="367.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@emailIcon.png" />
+            <Image url="@../img/emailIcon.png" />
          </image>
       </ImageView>
+      <Label layoutX="250.0" layoutY="85.0" text="Register new account">
+         <font>
+            <Font name="Levenim MT Bold" size="48.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
