--- a/src/gui/resturant/NewOrdersScreen.fxml
+++ b/src/gui/resturant/NewOrdersScreen.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.NewOrderScreenController">
+
+<VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.NewOrderScreenController">
    <children>
       <BorderPane prefHeight="650.0" prefWidth="1010.0">
          <center>
@@ -48,4 +48,4 @@
          </center>
       </BorderPane>
    </children>
-</AnchorPane>
+</VBox>
